--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/material": "^5.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@klarr-agency/circum-icons-react": "^2.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
